--- a/photo.html
+++ b/photo.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="js/script.min.js"></script>
+  <script src="js/picturefill.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/normalize.css">
@@ -44,7 +45,7 @@
     </section>
   </section>
 </header>
-<main class="container">
+<main class="main-class">
   <div class="wrapper-flex">
     <section class="user-blogs">
       <h2 class="user-blogs__text">Взгляните на фотографии, которые выкладывают пользователи!<br
@@ -60,7 +61,7 @@
           <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
           <img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@1x.jpg 1x, img/panorama-mobile@2x.jpg 2x"
-               alt="Фотография пользователя из социальной сети">
+                alt="Фотография пользователя из социальной сети">
           <span class="special-icon">Панорама дня</span>
         </picture>
       </figure>
@@ -91,7 +92,7 @@
           <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
           <img src="img/photo-car-mobile.jpg" srcset="img/photo-car-mobile.jpg 1x, img/photo-car-mobile@2x.jpg 2x"
-               alt="Фотография пользователя из социальной сети">
+                alt="Фотография пользователя из социальной сети">
         </picture>
       </figure>
       <div class="blog-post__body">
@@ -118,8 +119,8 @@
                   srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
           <img src="img/photo-drumset-mobile.jpg"
-               srcset="img/photo-drumset-mobile.jpg 1x, img/photo-drumset-mobile@2x.jpg 2x"
-               alt="Фотография пользователя из социальной сети">
+                srcset="img/photo-drumset-mobile.jpg 1x, img/photo-drumset-mobile@2x.jpg 2x"
+                alt="Фотография пользователя из социальной сети">
         </picture>
       </figure>
       <div class="blog-post__body">
@@ -146,8 +147,8 @@
                   srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
           <img src="img/photo-window-mobile.jpg"
-               srcset="img/photo-window-mobile.jpg 1x, img/photo-window-mobile@2x.jpg 2x"
-               alt="Фотография пользователя из социальной сети">
+                srcset="img/photo-window-mobile.jpg 1x, img/photo-window-mobile@2x.jpg 2x"
+                alt="Фотография пользователя из социальной сети">
         </picture>
       </figure>
       <div class="blog-post__body">
@@ -173,7 +174,7 @@
           <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
           <img src="img/photo-fair-mobile.jpg" srcset="img/photo-fair-mobile.jpg 1x, img/photo-fair-mobile@2x.jpg 2x"
-               alt="Фотография пользователя из социальной сети">
+                alt="Фотография пользователя из социальной сети">
         </picture>
       </figure>
       <div class="blog-post__body">
@@ -197,8 +198,8 @@
                   alt="Фотография пользователя">
           <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
-          <img src="img/photo-road-mobile.jpg" srcset="img/photo-pov-mobile.jpg 1x, img/photo-pov-mobile@2x.jpg 2x"
-               alt="Фотография пользователя из социальной сети">
+          <img src="img/photo-pov-mobile.jpg" srcset="img/photo-pov-mobile.jpg 1x, img/photo-pov-mobile@2x.jpg 2x"
+                alt="Фотография пользователя из социальной сети">
         </picture>
       </figure>
       <div class="blog-post__body">
@@ -223,7 +224,7 @@
           <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
           <img src="img/photo-wing-mobile.jpg" srcset="img/photo-wing-mobile.jpg 1x, img/photo-wing-mobile@2x.jpg 2x"
-               alt="Фотография пользователя из социальной сети">
+                alt="Фотография пользователя из социальной сети">
         </picture>
       </figure>
       <div class="blog-post__body">
@@ -254,7 +255,7 @@
           <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
           <img src="img/photo-road-mobile.jpg" srcset="img/photo-road-mobile.jpg 1x, img/photo-road-mobile@2x.jpg 2x"
-               alt="Фотография пользователя из социальной сети">
+                alt="Фотография пользователя из социальной сети">
         </picture>
       </div>
       <div class="image-editor__tools">
