graphic for desktop and tablet

--- a/index.html
+++ b/index.html
@@ -60,115 +60,171 @@
 </header>
 <main class="main-class">
   <div class="features">
-    <div class="wrapper-flex">
-      <h2 class="visually_hidden">Причины скачать приложение Pink</h2>
-      <div class="features-headers">
-        <h2 class="features__title features-title--first">Устали от серости мегаполиса?</h2>
-        <br class="br-separator">
-        <h2 class="features__title features__title--second">Нам есть, что вам <br class="separator"> предложить!</h2>
-      </div>
-      <div class="features-items">
-        <div class="wrapper-flex features-items__block--desktop-wrapper">
-          <div class="features-items-group">
-            <section class="features-items__block features-items__block--one">
-              <h2 class="features-items__title">Поднимает настроение</h2>
-              <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в
-                <br class="separator">несколько кликов!</p>
-            </section>
-            <section class="features-items__block features-items__block--two">
-              <h2 class="features-items__title">Меняем мир вокруг</h2>
-              <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы <br class="separator separator--tablet"> усилить эффект</p>
-            </section>
-            <section class="features-items__block features-items__block--three">
-              <h2 class="features-items__title">Заводит <br class="separator-desktop"> новых друзей</h2>
-              <p class="features-items__descr">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и <br
-                class="separator separator--mobile"> заводите новых </p>
-            </section>
-          </div>
-          <div class="features-items__image-wrap">
-            <picture>
-              <img src="img/iphone-screen-mobile.png" srcset="img/iphone-screen-mobile.png 1x, img/iphone-screen-mobile@2x.png 2x" width="140" height="324" alt="Pink image">
-            </picture>
-          </div>
-          <section class="features-items__block mobile_hidden">
+    <!--<div class="wrapper-flex">-->
+    <h2 class="visually_hidden">Причины скачать приложение Pink</h2>
+    <div class="features-headers">
+      <h2 class="features__title features-title--first">Устали от серости мегаполиса?</h2>
+      <br class="br-separator">
+      <h2 class="features__title features__title--second">Нам есть, что вам <br class="separator"> предложить!</h2>
+    </div>
+    <div class="features-items">
+      <svg version="1.0" id="Layer_1" class="svg-pic svg-pic--background" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1200 94.074" enable-background="new 0 0 1200 94.074" xml:space="preserve">
+              <polygon points="1200,0 0,0 0,94.074 "/>
+            </svg>
+      <div class="wrapper-flex features-items__block--desktop-wrapper">
+        <div class="features-items-group">
+          <section class="features-items__block">
+            <h2 class="visually_hidden">Фотография блока преимуществ</h2>
+            <article class="features-items__block features-items__block--one image"></article>
+            <h2 class="features-items__title">Поднимает настроение</h2>
+            <p class="features-items__descr">Приложение позволит вам победить<br class="separator separator--tablet">
+              осеннюю хандру и деперессию буквально в
+              <br class="separator">несколько кликов!</p>
+          </section>
+          <section class="features-items__block">
+            <article class="features-items__block features-items__block--two image"></article>
+            <h2 class="features-items__title">Меняем мир вокруг</h2>
+            <p class="features-items__descr">Сделайте снимок и украсьте его смайликом <br
+              class="separator separator--tablet">или текстовой подписью, чтобы <br
+              class="separator separator--tablet"> усилить эффект</p>
+          </section>
+          <section class="features-items__block">
+            <article class="features-items__block features-items__block--three image"></article>
+            <h2 class="features-items__title">Заводит <br class="separator-desktop"> новых друзей</h2>
+            <p class="features-items__descr">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и <br
+              class="separator separator--mobile"> заводите новых </p>
+          </section>
+        </div>
+        <div class="features-items__image-wrap">
+          <picture>
+            <img src="img/iphone-screen-mobile.png"
+                 srcset="img/iphone-screen-mobile.png 1x, img/iphone-screen-mobile@2x.png 2x" width="140" height="324"
+                 alt="Pink image">
+          </picture>
+        </div>
+        <section class="features-items__block mobile_hidden">
+          <svg version="1.1" id="Layer_1" class="svg-pic svg-pic--timer" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="235px" height="300px" viewBox="0 0 298 345.097" enable-background="new 0 0 298 345.097" xml:space="preserve" fill="#dedede">
+              <path d="M264.568,102.055l5.355-5.355c7.717-7.717,9.124-18.938,3.126-24.935c-5.997-5.997-17.217-4.59-24.934,3.127l-5.386,5.385 C221.768,63.292,196.11,51.875,168,48.297v-9.583h7.658c10.914,0,19.843-8.711,19.843-19.357S186.573,0,175.659,0h-53.317  c-10.913,0-19.842,8.711-19.842,19.357s8.929,19.357,19.842,19.357H130v9.583C56.681,57.629,0,120.244,0,196.097  c0,82.291,66.709,149,149,149c82.29,0,149-66.709,149-149C298,160.434,285.465,127.703,264.568,102.055z M149,306.264 c-60.844,0-110.167-49.323-110.167-110.167S88.156,85.93,149,85.93c60.843,0,110.167,49.323,110.167,110.167  S209.843,306.264,149,306.264z"/>
+            </svg>
+          <svg version="1.1" id="Circle" class="svg-pic svg-pic--circle__tablet" style="">
+            <circle r="88" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" cx="95"
+                    cy="95">
+            </circle>
+          </svg>
+          <svg version="1.1" id="Circle" class="svg-pic svg-pic--circle__desktop" style="">
+            <circle r="109" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" cx="127"
+                    cy="118">
+            </circle>
+          </svg>
+          <div class="text-wrapper">
             <h2 class="features-items__title--custom_size">Эффект<br
               class="separator separator--mobile separator--tablet"> на 24 часа!</h2>
             <p class="features-items__descr features-items__descr--custom_description">Британские ученые провели
-              исследования и доказали,<br class="separator-desktop">что положительный эффект от использования приложения
+              исследования и доказали,<br class="separator-desktop">что положительный эффект <br
+                class="separator separator--tablet"> от использования
+              приложения
               длится <br class="separator separator--tablet">целые сутки!</p>
-            <a class="features-items__link">Узнать больше об исследовании</a>
-          </section>
-        </div>
+            <a href="#" class="features-items__link">Узнать больше об исследовании</a>
+          </div>
+        </section>
       </div>
     </div>
+    <!--</div>-->
   </div>
   <section class="reviews">
+    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="78.672px" height="63.789px" viewBox="0 0 78.672 63.789" enable-background="new 0 0 78.672 63.789" xml:space="preserve" class="svg-pic--quots__only-desktop">
+          <g>
+            <path d="M34.967,7.063L30.713,0C28.272,1.495,0,12.207,0,39.617c0,7.231,0.336,24.172,18.9,24.172 c11.187,0,13.94-10.279,13.94-13.584c0-21.977-21.382-14.177-21.382-14.177C11.458,17.957,31.263,9.184,34.967,7.063z"/>
+          </g>
+          <g>
+            <path d="M78.672,7.063L74.418,0c-2.44,1.495-30.713,12.207-30.713,39.617c0,7.231,0.337,24.172,18.9,24.172 c11.187,0,13.939-10.279,13.939-13.584c0-21.977-21.381-14.177-21.381-14.177C55.165,17.957,74.969,9.184,78.672,7.063z"/>
+          </g>
+        </svg>
     <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
     <div class="wrapper-flex">
       <article class="slider-reviews">
         <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
-        <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на
-          привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;
+        <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому <br
+          class="separator separator--tablet"> взглянуть на привычные серые вещи! А еще я познакомился со своей будущей
+          женой в комментариях к выложенной фотографии!&raquo;
         </div>
+        <button class="toggle-arrow toggle-arrow--prev">
+          <svg version="1.1" id="Layer_1" class="svg-pic--toggle-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+            <path d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z"/>
+          </svg>
+        </button>
+        <button class="toggle-arrow toggle-arrow--next">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px"  class="svg-pic--toggle-icon" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+            <path d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z"/>
+          </svg>
+        </button>
         <h2 class="slider-reviews__header">Николай Петров <br class="separator"> <span>25 лет, водитель трамвая</span>
         </h2>
+        <div class="slider">
+          <input type="radio" id="radio-slider-1" class="radio-slider radio-slider__one" checked>
+          <input type="radio" id="radio-slider-2" class="radio-slider radio-slider__two">
+          <input type="radio" id="radio-slider-3" class="radio-slider radio-slider__three">
+          <div class="slider__slider-controls">
+            <label for="radio-slider-1"></label>
+            <label for="radio-slider-2"></label>
+            <label for="radio-slider-3"></label>
+          </div>
+        </div>
       </article>
-      <div class="slider-reviews__pagination">
-        <span class="slider-reviews__pagination-item--active"></span>
-        <span>
-                    </span>
-        <span>
-                    </span>
-      </div>
     </div>
   </section>
   <section class="price-block">
+    <svg version="1.0" id="Layer_1" class="svg-pic svg-pic--background__table" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1200 94.074" enable-background="new 0 0 1200 94.074" xml:space="preserve">
+              <polygon points="1200,0 0,0 0,94.074 "/>
+    </svg>
     <h2 class="visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
-    <div class="wrapper">
-      <table class="traffic-table">
-        <thead class="traffic-table__head">
-        <tr>
-          <th class="traffic-table_headcell traffic-table_headcell--no-borders"></th>
-          <th class="traffic-table_headcell">
-            <p class="price-table__headcell-type">База</p>
-            <p class="price-table__headcell-price">1,99 USD</p>
-          </th>
-          <th class="traffic-table_headcell">
-            <p class="price-table__headcell-type">Стандарт</p>
-            <p class="price-table__headcell-price">3,99 USD</p>
-          </th>
-          <th class="traffic-table_headcell">
-            <p class="price-table__headcell-type">Анлим</p>
-            <p class="price-table__headcell-price">9,99 USD</p>
-          </th>
-        </tr>
-        </thead>
-        <tbody class="traffic-table__body">
-        <tr class="traffic-table__row">
-          <td class="traffic-table__cell">Розовый фильтр</td>
-          <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
-          <td class="traffic-table__cell traffic-table__cell--yes  traffic-table__cell--mobile">Розовый фильтр</td>
-          <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
-        </tr>
-        <tr class="traffic-table__row">
-          <td class="traffic-table__cell">Смайлики</td>
-          <td class="traffic-table__cell  traffic-table__cell--no">Розовый фильтр</td>
-          <td class="traffic-table__cell traffic-table__cell--no traffic-table__cell--mobile">Смайлики</td>
-          <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
-        </tr>
-        <tr class="traffic-table__row">
-          <td class="traffic-table__cell">Комментарии</td>
-          <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
-          <td class="traffic-table__cell traffic-table__cell--no traffic-table__cell--mobile">Комментарии</td>
-          <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
-        </tr>
-        </tbody>
-      </table>
-      <div class="slider-reviews__pagination">
-        <span class="slider-reviews__pagination-item--active"></span>
-        <span></span>
-        <span></span>
+    <div class="table-background">
+      <div class="table-wrapper">
+        <table class="traffic-table">
+          <thead class="traffic-table__head">
+          <tr>
+            <th class="traffic-table_headcell traffic-table_headcell--no-borders"></th>
+            <th class="traffic-table_headcell">
+              <p class="price-table__headcell-type">База</p>
+              <p class="price-table__headcell-price">1,99 USD</p>
+            </th>
+            <th class="traffic-table_headcell">
+              <p class="price-table__headcell-type">Стандарт</p>
+              <p class="price-table__headcell-price">3,99 USD</p>
+            </th>
+            <th class="traffic-table_headcell">
+              <p class="price-table__headcell-type">Анлим</p>
+              <p class="price-table__headcell-price">9,99 USD</p>
+            </th>
+          </tr>
+          </thead>
+          <tbody class="traffic-table__body">
+          <tr class="traffic-table__row">
+            <td class="traffic-table__cell">Розовый фильтр</td>
+            <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
+            <td class="traffic-table__cell traffic-table__cell--yes  traffic-table__cell--mobile">Розовый фильтр</td>
+            <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
+          </tr>
+          <tr class="traffic-table__row">
+            <td class="traffic-table__cell">Смайлики</td>
+            <td class="traffic-table__cell  traffic-table__cell--no">Розовый фильтр</td>
+            <td class="traffic-table__cell traffic-table__cell--no traffic-table__cell--mobile">Смайлики</td>
+            <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
+          </tr>
+          <tr class="traffic-table__row">
+            <td class="traffic-table__cell">Комментарии</td>
+            <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
+            <td class="traffic-table__cell traffic-table__cell--no traffic-table__cell--mobile">Комментарии</td>
+            <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
+          </tr>
+          </tbody>
+        </table>
       </div>
+    </div>
+    <div class="slider-reviews__pagination">
+      <span class="slider-reviews__pagination-item--active"></span>
+      <span></span>
+      <span></span>
     </div>
   </section>
   <section class="info-block">
@@ -189,8 +245,15 @@
     <div class="map-block">
       <div class="wrapper-flex map">
         <p class="map-block__text">Приезжайте в гости:</p>
-        <address><a class="map-block__link" href="#">ул.Большая <br class="separator separator--mobile separator--tablet separator--desktop">Конюшенная, 19/8</a></address>
+        <address><a class="map-block__link" href="#">ул.Большая <br
+          class="separator separator--mobile separator--tablet"> <br
+          class="separator separator--mobile"> <br class="separator separator--desktop">
+          Конюшенная
+          , 19/8</a></address>
         <div class="map-block_map-item">
+          <svg version="1.0" id="Layer_1"  class="svg-pic svg-pic--footer"xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="auto" viewBox="0 0 595.28 61.905" enable-background="new 0 0 595.28 61.905" xml:space="preserve">
+           <polygon fill="#ffffff" points="297.64,61.905 0,0 595.28,0 "/>
+          </svg>
         </div>
       </div>
     </div>
