--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="js/script.min.js"></script>
-  <script src="js/picturefill.js"></script>
+  <script async src="js/picturefill.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/normalize.css">
