--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </g>
         </svg>
     <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
-    <div class="wrapper-flex">
+    <div class="wrapper-flex reviews">
       <article class="slider-reviews">
         <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
         <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому <br
@@ -188,8 +188,13 @@
               <p class="price-table__headcell-type">База</p>
               <p class="price-table__headcell-price">1,99 USD</p>
             </th>
-            <th class="traffic-table_headcell">
-              <p class="price-table__headcell-type">Стандарт</p>
+            <th class="traffic-table_headcell traffic-table_headcel--best_price">
+              <p class="price-table__headcell-type">
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" class="svg-pic--hit_ribbon" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74px" height="73px" viewBox="0 0 74 73" enable-background="new 0 0 74 73" xml:space="preserve">
+                  <polygon fill="#D22856" points="31,0 0,30.581 0,73 74,0 "></polygon>
+                </svg>
+                Стандарт
+              </p>
               <p class="price-table__headcell-price">3,99 USD</p>
             </th>
             <th class="traffic-table_headcell">
@@ -219,6 +224,16 @@
           </tr>
           </tbody>
         </table>
+        <div class="slider slider--mobile">
+          <input type="radio" id="radio-slider-mobile-1" class="radio-slider radio-slider__one" checked>
+          <input type="radio" id="radio-slider-mobile-2" class="radio-slider radio-slider__two">
+          <input type="radio" id="radio-slider-mobile-3" class="radio-slider radio-slider__three">
+          <div class="slider__slider-controls">
+            <label for="radio-slider-1"></label>
+            <label for="radio-slider-2"></label>
+            <label for="radio-slider-3"></label>
+          </div>
+        </div>
       </div>
     </div>
     <div class="slider-reviews__pagination">
