--- a/photo.html
+++ b/photo.html
@@ -403,8 +403,9 @@
               </div>
             </div>
           </dd>
+          <hr class="range-controls__separate"></hr>
           <dt class="image-editor__tools image-editor__tools--fill image-editor__tools--item ">
-            <svg class="image-editor__icon-crop" width="50" height="45">
+            <svg class="image-editor__icon-fill" width="50" height="45">
               <use xlink:href="#img--svg--icon-editor-fill"></use>
             </svg>
           </dt>
@@ -428,8 +429,9 @@
               </div>
             </div>
           </dd>
+          <hr class="range-controls__separate range-controls__separate--mobile_hidden"></hr>
           <dt class="image-editor__tools image-editor__tools--item  image-editor__tools--item  image-editor__tools--contrast">
-            <svg class="image-editor__icon-crop" width="33" height="45">
+            <svg class="image-editor__icon-contrast" width="33" height="45">
               <use xlink:href="#img--svg--icon-editor-contrast"></use>
             </svg>
           </dt>
@@ -453,6 +455,7 @@
               </div>
             </div>
           </dd>
+          <hr class="range-controls__separate range-controls__separate--mobile_hidden"></hr>
         </dl>
         <div class="buttons-block">
           <button class="editor-block__button editor-block__button--submit" type="submit">Запостить</button>
