--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     var myMap,
       myPlacemark;
 
-    function init(){
+    function init() {
       myMap = new ymaps.Map("map", {
         center: [59.938518, 30.323342],
-        zoom: 19
+        zoom: 19,
+        controls: ['zoomControl']
       });
 
       myPlacemark = new ymaps.Placemark([59.938518, 30.323342], {
@@ -33,11 +34,11 @@
       }, {
         iconLayout: 'default#image',
         iconImageHref: 'img/icon-map-marker.svg',
-        iconImageSize: [35.983,35.983],
+        iconImageSize: [35.983, 35.983],
         iconImageOffset: [-5, -38]
       }),
 
-      myMap.geoObjects.add(myPlacemark);
+        myMap.geoObjects.add(myPlacemark);
     }
   </script>
 </head>
@@ -172,12 +173,12 @@
   </symbol>
 </svg>
 <header class="page-header">
-    <nav class="main-nav main-nav--nojs hidden-devices">
-      <button class="main-nav__toggle">
-      </button>
-      <ul class="main-nav__list site-list">
-        <li class="main-nav__items--mobile-hidden">
-          <a href="#" class="page-header__logo-link page-header__logo-link--desktop">
+  <nav class="main-nav main-nav--nojs hidden-devices">
+    <button class="main-nav__toggle">
+    </button>
+    <ul class="main-nav__list site-list">
+      <li class="main-nav__items--mobile-hidden">
+        <a href="#" class="page-header__logo-link page-header__logo-link--desktop">
           <svg width="146" height="40" viewBox="0 0 146 40">
             <g class="page-header__logo-pink page-header__logo-pink--desktop">
               <g>
@@ -214,15 +215,15 @@
               </g>
             </g>
           </svg>
-          </a>
-        </li>
-        <li class="main-nav__items main-nav__items--active"><a>Главная</a></li>
-        <li class="main-nav__items"><a href="photo.html">Фотографии</a></li>
-        <li class="main-nav__items"><a href="form.html">Конкурс</a></li>
-        <li class="main-nav__items"><a href="#">HTML Academy</a></li>
-      </ul>
-      <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
-    </nav>
+        </a>
+      </li>
+      <li class="main-nav__items main-nav__items--active"><a>Главная</a></li>
+      <li class="main-nav__items"><a href="photo.html">Фотографии</a></li>
+      <li class="main-nav__items"><a href="form.html">Конкурс</a></li>
+      <li class="main-nav__items"><a href="#">HTML Academy</a></li>
+    </ul>
+    <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
+  </nav>
   <div class="page-header__nav-wrap">
     <a href="/" class="page-header__logo-link">
       <svg width="146" height="40" viewBox="0 0 146 40">
@@ -240,8 +241,10 @@
         </g>
         <g class="page-header__logo-pink page-header__logo-pink--tablet">
           <g>
-            <path d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.064 c0,4.861-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.288-1.288,1.288c-0.676,0-1.256-0.58-1.256-1.288V18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917H79.988L79.988,29.641z"/>
-            <path d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z"/>
+            <path
+              d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.064 c0,4.861-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.288-1.288,1.288c-0.676,0-1.256-0.58-1.256-1.288V18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917H79.988L79.988,29.641z"/>
+            <path
+              d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z"/>
             <path
               d="M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.224,0.58,1.224,1.256v20.349c0,0.676-0.481,1.19-1.158,1.19h-0.129c-0.548,0-0.935-0.321-1.319-0.772l-13.975-17.868v17.45c0,0.676-0.547,1.256-1.256,1.256c-0.676,0-1.223-0.58-1.223-1.256V18.532 H102.744z"/>
             <path
@@ -276,28 +279,28 @@
   <section class="promo-download">
     <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения PInk</h2>
     <div class="promo-download__wrapper">
-    <a class="promo-download__button" href="#">Скачать приложение</a>
-    <div class="promo-download__links">
-      <ul class="os-nav os-list">
-        <li class="os-list__item">
-          <svg width="45" height="70" class="os-list__icon os-list__icon--apple">
-            <use xlink:href="#img--svg--logo-apple"></use>
-          </svg>
-        </li>
-        <li class="os-list__item">
-          <svg width="45" height="70" class="os-list__icon os-list__icon--android">
-            <use xlink:href="#img--svg--logo-android"></use>
-          </svg>
-        </li>
-        <li class="os-list__item">
-          <svg width="45" height="70" class="os-list__icon os-list__icon--windows">
-            <use xlink:href="#img--svg--logo-microsoft"></use>
-          </svg>
-        </li>
-      </ul>
-      <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
-        <br class="separator separator--mobile">Windows Phone, OS X, Windows 8</h2>
-    </div>
+      <a class="promo-download__button" href="#">Скачать приложение</a>
+      <div class="promo-download__links">
+        <ul class="os-nav os-list">
+          <li class="os-list__item">
+            <svg width="45" height="70" class="os-list__icon os-list__icon--apple">
+              <use xlink:href="#img--svg--logo-apple"></use>
+            </svg>
+          </li>
+          <li class="os-list__item">
+            <svg width="45" height="70" class="os-list__icon os-list__icon--android">
+              <use xlink:href="#img--svg--logo-android"></use>
+            </svg>
+          </li>
+          <li class="os-list__item">
+            <svg width="45" height="70" class="os-list__icon os-list__icon--windows">
+              <use xlink:href="#img--svg--logo-microsoft"></use>
+            </svg>
+          </li>
+        </ul>
+        <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
+          <br class="separator separator--mobile">Windows Phone, OS X, Windows 8</h2>
+      </div>
     </div>
   </section>
 </header>
@@ -597,7 +600,8 @@
                 d="M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.225,0.58,1.225,1.256v20.349c0,0.677-0.48,1.19-1.158,1.19h-0.129 c-0.548,0-0.936-0.321-1.318-0.772l-13.976-17.867v17.449c0,0.677-0.547,1.257-1.257,1.257c-0.676,0-1.223-0.58-1.223-1.257V18.532 H102.744z"/>
               <path
                 d="M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.168 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.936c0,0.676-0.577,1.288-1.285,1.288c-0.482,0-0.807-0.259-1.03-0.58l-8.401-10.464l-4.863,4.861 v4.895c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z"/>
-            </g>ра
+            </g>
+            ра
             <g class="pink-parts">
               <path
                 d="M98.498,9.875c-2.002,0-3.623-1.623-3.623-3.624c0,2.001-1.623,3.624-3.625,3.624 c2.002,0,3.625,1.623,3.625,3.624C94.875,11.498,96.496,9.875,98.498,9.875z"/>
