--- a/photo.html
+++ b/photo.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
 <svg style="display:none">
